test/fixtures/ingress-class-missing/passing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: classed-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-svc
            port:
              number: 80
